fixed swiping on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     background-color: #A89E9D;
     overflow-x: hidden;
 }
+content {
+    overflow-x: hidden;
+}
 header {
     text-align: center;
 }
